--- a/index.html
+++ b/index.html
@@ -7157,6 +7157,7 @@ jQuery(document).ready(function($) {
 									<option value="custom_smartcash">SmartCash</options>
 									<option value="custom_terracoin">Terracoin</options>
 									<option value="custom_syscoin">Syscoin</options>
+									<option value="custom_deviantcoin">DeviantCoin</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -7213,6 +7214,7 @@ jQuery(document).ready(function($) {
 									<option value="custom_smartcash">SmartCash</options>
 									<option value="custom_terracoin">Terracoin</options>
 									<option value="custom_syscoin">Syscoin</options>
+									<option value="custom_deviantcoin">DeviantCoin</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
