--- a/index.html
+++ b/index.html
@@ -6489,7 +6489,7 @@ jQuery(document).ready(function($) {
 
 					<div class="tab-pane tab-content" id="about">
 						<h2>About <small>open source Pandacoin wallet</small></h2>
-						<p>Version 2.0.33</p>
+						<p>Version 2.0.34</p>
 						<p>Compatible with Pandacoin</p>
                         <p><a href="https://github.com/DigitalPandacoin/coinbin">https://github.com/DigitalPandacoin/coinbin</a></p>
 						<p>Forked from <a href="https://coinb.in">https://coinb.in</a></p>
@@ -6961,28 +6961,31 @@ jQuery(document).ready(function($) {
 									<option value="dash.host" rel="0x4c;0xcc;0x10;0xee80286a;0xee8031e8;dash.host;dash.host">Dash</option>
 									<option value="grs.host" rel="0x24;0x80;0x5;0xee80286a;0xee8031e8;grs.host;grs.host">Groestlcoin</option>
 									<option value="zcash.host" rel="0x1c;0x9c;0x1c;0xee80286a;0xee8031e8;zcash.host;zcash.host">Zcash (Blockchair)</option>
-									<option value="custom_particl" rel="0x38;0x6c;0x4;0xee80286a;0xee8031e8;custom_particl;custom_particl">Particl</options>
-									<option value="custom_aurora" rel="0x17;0xb0;0x5;0xee80286a;0xee8031e8;custom_aurora;custom_aurora">AuroraCoin</options>
-									<option value="custom_htmlcoin" rel="0x29;0xa9;0x6;0xee80286a;0xee8031e8;custom_htmlcoin;custom_htmlcoin">Htmlcoin</options>
-									<option value="custom_safecoin" rel="0x3d;0xbd;0x56;0xee80286a;0xee8031e8;custom_safecoin;custom_safecoin">SafeCoin</options>
-									<option value="custom_rdd" rel="0x3d;0xbd;0x5;0xee80286a;0xee8031e8;custom_rdd;custom_rdd">Reddcoin</options>
-									<option value="custom_feather" rel="0xe;0x8e;0x5;0xee80286a;0xee8031e8;custom_feather;custom_feather">feathercoin</options>
-									<option value="custom_viacoin" rel="0x47;0xc7;0x21;0xee80286a;0xee8031e8;custom_viacoin;custom_viacoin">Viacoin</options>
-									<option value="custom_komodo" rel="0x3c;0xbc;0x55;0xee80286a;0xee8031e8;custom_komodo;custom_komodo">Komodo</options>
-									<option value="custom_experiencechain" rel="0x4c;0x80;0x1c;0xee80286a;0xee8031e8;custom_experiencechain;custom_experiencechain">eXPerience Chain</options>
-									<option value="custom_piratechain" rel="0x3c;0xbc;0x55;0xee80286a;0xee8031e8;custom_piratechain;custom_piratechain">Pirate-Chain</options>
-									<option value="custom_eureka" rel="0x21;0x3a;0x23;0xee80286a;0xee8031e8;custom_eureka;custom_eureka">Eureka Coin</options>
-									<option value="custom_gobyte" rel="0x26;0xc6;0xa;0xee80286a;0xee8031e8;custom_gobyte;custom_gobyte">GoByte</options>
-									<option value="custom_axecore" rel="0x37;0xcc;0x10;0xee80286a;0xee8031e8;custom_axecore;custom_axecore">Axecore</options>
-									<option value="custom_capricoin" rel="0x12;0x92;0x32;0xee80286a;0xee8031e8;custom_capricoin;custom_capricoin">Capricoin</options>
-									<option value="custom_zcash" rel="0x1c;0x9c;0x1c;0xee80286a;0xee8031e8;custom_zcash;custom_zcash">zCash</options>
-									<option value="custom_commercium" rel="0x1c;0x8c;0x33;0xee80286a;0xee8031e8;custom_commercium;custom_commercium">Commercium</options>
-									<option value="custom_globaltoken" rel="0x26;0xa6;0x8d;0xee80286a;0xee8031e8;custom_globaltoken;custom_globaltoken">GlobalToken</options>
-									<option value="custom_zcoin" rel="0x52;0xd2;0x7;0xee80286a;0xee8031e8;custom_zcoin;custom_zcoin">zCoin</options>
-									<option value="custom_qtum" rel="0x3a;0x80;0x32;0xee80286a;0xee8031e8;custom_qtum;custom_qtum">qtum</options>
-									<option value="custom_ilcoin" rel="0x0;0x80;0x5;0xee80286a;0xee8031e8;custom_ilcoin;custom_ilcoin">ILCoin</options>
-									<option value="custom_terracoin" rel="0x0;0x80;0x5;0xee80286a;0xee8031e8;custom_terracoin;custom_terracoin">Terracoin</options>
-									<option value="custom_syscoin" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;custom_syscoin;custom_syscoin">Syscoin</options>
+									<option value="custom_particl" rel="0x38;0x6c;0x4;0xee80286a;0xee8031e8;custom_particl;custom_particl">Particl</option>
+									<option value="custom_aurora" rel="0x17;0xb0;0x5;0xee80286a;0xee8031e8;custom_aurora;custom_aurora">AuroraCoin</option>
+									<option value="custom_htmlcoin" rel="0x29;0xa9;0x6;0xee80286a;0xee8031e8;custom_htmlcoin;custom_htmlcoin">Htmlcoin</option>
+									<option value="custom_safecoin" rel="0x3d;0xbd;0x56;0xee80286a;0xee8031e8;custom_safecoin;custom_safecoin">SafeCoin</option>
+									<option value="custom_rdd" rel="0x3d;0xbd;0x5;0xee80286a;0xee8031e8;custom_rdd;custom_rdd">Reddcoin</option>
+									<option value="custom_feather" rel="0xe;0x8e;0x5;0xee80286a;0xee8031e8;custom_feather;custom_feather">feathercoin</option>
+									<option value="custom_viacoin" rel="0x47;0xc7;0x21;0xee80286a;0xee8031e8;custom_viacoin;custom_viacoin">Viacoin</option>
+									<option value="custom_komodo" rel="0x3c;0xbc;0x55;0xee80286a;0xee8031e8;custom_komodo;custom_komodo">Komodo</option>
+									<option value="custom_experiencechain" rel="0x4c;0x80;0x1c;0xee80286a;0xee8031e8;custom_experiencechain;custom_experiencechain">eXPerience Chain</option>
+									<option value="custom_piratechain" rel="0x3c;0xbc;0x55;0xee80286a;0xee8031e8;custom_piratechain;custom_piratechain">Pirate-Chain</option>
+									<option value="custom_eureka" rel="0x21;0x3a;0x23;0xee80286a;0xee8031e8;custom_eureka;custom_eureka">Eureka Coin</option>
+									<option value="custom_gobyte" rel="0x26;0xc6;0xa;0xee80286a;0xee8031e8;custom_gobyte;custom_gobyte">GoByte</option>
+									<option value="custom_axecore" rel="0x37;0xcc;0x10;0xee80286a;0xee8031e8;custom_axecore;custom_axecore">Axecore</option>
+									<option value="custom_capricoin" rel="0x12;0x92;0x32;0xee80286a;0xee8031e8;custom_capricoin;custom_capricoin">Capricoin</option>
+									<option value="custom_zcash" rel="0x1c;0x9c;0x1c;0xee80286a;0xee8031e8;custom_zcash;custom_zcash">zCash</option>
+									<option value="custom_commercium" rel="0x1c;0x8c;0x33;0xee80286a;0xee8031e8;custom_commercium;custom_commercium">Commercium</option>
+									<option value="custom_globaltoken" rel="0x26;0xa6;0x8d;0xee80286a;0xee8031e8;custom_globaltoken;custom_globaltoken">GlobalToken</option>
+									<option value="custom_zcoin" rel="0x52;0xd2;0x7;0xee80286a;0xee8031e8;custom_zcoin;custom_zcoin">zCoin</option>
+									<option value="custom_qtum" rel="0x3a;0x80;0x32;0xee80286a;0xee8031e8;custom_qtum;custom_qtum">qtum</option>
+									<option value="custom_ilcoin" rel="0x0;0x80;0x5;0xee80286a;0xee8031e8;custom_ilcoin;custom_ilcoin">ILCoin</option>
+									<option value="custom_terracoin" rel="0x0;0x80;0x5;0xee80286a;0xee8031e8;custom_terracoin;custom_terracoin">Terracoin</option>
+									<option value="custom_deviantcoin" rel="0x5a;0x89;0xa;0xee80286a;0xee8031e8;custom_deviantcoin;custom_deviantcoin">DeviantCoin</option>
+									<option value="custom_syscoin" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;custom_syscoin;custom_syscoin">Syscoin</option>
+									<option value="custom_dimecoin" rel="0xf;0x8f;0x9;0xee80286a;0xee8031e8;custom_dimecoin;custom_dimecoin">Dimecoin</option>
+									<option value="custom_lynx" rel="0x2d;0xad;0x32;0xee80286a;0xee8031e8;custom_lynx;custom_lynx">Lynx</option>
 									<!-- <option value="" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;x;x"></option> -->
 									<option value="custom" rel="0x00;0x80;0x05;0x488b21e;0x488ade4;cryptoid.custom;cryptoid.custom">Custom</option>
 								</select>
@@ -7133,31 +7136,33 @@ jQuery(document).ready(function($) {
 									<option value="dash.host">Dash</option>
 									<option value="grs.host">Groestlcoin</option>
 									<option value="zcash.host">Zcash</option>
-									<option value="ripple.host">Ripple</options>
-									<option value="custom_particl">Particl</options>
-									<option value="custom_aurora">AuroraCoin</options>
-									<option value="custom_htmlcoin">Htmlcoin</options>
-									<option value="custom_safecoin">SafeCoin</options>
-									<option value="custom_rdd">Reddcoin</options>
-									<option value="custom_feather">feathercoin</options>
-									<option value="custom_viacoin">Viacoin</options>
-									<option value="custom_komodo">Komodo</options>
-									<option value="custom_piratechain">Pirate-Chain</options>
-									<option value="custom_experiencechain">eXPerience Chain</options>
-									<option value="custom_eureka">Eureka Coin</options>
-									<option value="custom_gobyte">GoByte</options>
-									<option value="custom_axecore">Axecore</options>
-									<option value="custom_capricoin">Capricoin</options>
-									<option value="custom_zcash">zCash</options>
-									<option value="custom_commercium">Commercium</options>
-									<option value="custom_globaltoken">GlobalToken</options>
-									<option value="custom_zcoin">zCoin</options>
-									<option value="custom_qtum">qtum</options>
-									<option value="custom_ilcoin">ILCoin</options>
-									<option value="custom_smartcash">SmartCash</options>
-									<option value="custom_terracoin">Terracoin</options>
-									<option value="custom_syscoin">Syscoin</options>
-									<option value="custom_deviantcoin">DeviantCoin</options>
+									<option value="ripple.host">Ripple</option>
+									<option value="custom_particl">Particl</option>
+									<option value="custom_aurora">AuroraCoin</option>
+									<option value="custom_htmlcoin">Htmlcoin</option>
+									<option value="custom_safecoin">SafeCoin</option>
+									<option value="custom_rdd">Reddcoin</option>
+									<option value="custom_feather">feathercoin</option>
+									<option value="custom_viacoin">Viacoin</option>
+									<option value="custom_komodo">Komodo</option>
+									<option value="custom_piratechain">Pirate-Chain</option>
+									<option value="custom_experiencechain">eXPerience Chain</option>
+									<option value="custom_eureka">Eureka Coin</option>
+									<option value="custom_gobyte">GoByte</option>
+									<option value="custom_axecore">Axecore</option>
+									<option value="custom_capricoin">Capricoin</option>
+									<option value="custom_zcash">zCash</option>
+									<option value="custom_commercium">Commercium</option>
+									<option value="custom_globaltoken">GlobalToken</option>
+									<option value="custom_zcoin">zCoin</option>
+									<option value="custom_qtum">qtum</option>
+									<option value="custom_ilcoin">ILCoin</option>
+									<option value="custom_smartcash">SmartCash</option>
+									<option value="custom_terracoin">Terracoin</option>
+									<option value="custom_syscoin">Syscoin</option>
+									<option value="custom_deviantcoin">DeviantCoin</option>
+									<option value="custom_dimecoin">Dimecoin</option>
+									<option value="custom_lynx">Lynx</option>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -7190,31 +7195,33 @@ jQuery(document).ready(function($) {
 									<option value="dash.host">Dash</option>
 									<option value="grs.host">Groestlcoin</option>
 									<option value="zcash.host">Zcash</option>
-									<option value="ripple.host">Ripple</options>
-									<option value="custom_particl">Particl</options>
-									<option value="custom_aurora">AuroraCoin</options>
-									<option value="custom_htmlcoin">Htmlcoin</options>
-									<option value="custom_safecoin">SafeCoin</options>
-									<option value="custom_rdd">Reddcoin</options>
-									<option value="custom_feather">feathercoin</options>
-									<option value="custom_viacoin">Viacoin</options>
-									<option value="custom_komodo">Komodo</options>
-									<option value="custom_experiencechain">eXPerience Chain</options>
-									<option value="custom_piratechain">Pirate-Chain</options>
-									<option value="custom_eureka">Eureka Coin</options>
-									<option value="custom_gobyte">GoByte</options>
-									<option value="custom_axecore">Axecore</options>
-									<option value="custom_capricoin">Capricoin</options>
-									<option value="custom_zcash">zCash</options>
-									<option value="custom_commercium">Commercium</options>
-									<option value="custom_globaltoken">GlobalToken</options>
-									<option value="custom_zcoin">zCoin</options>
-									<option value="custom_qtum">qtum</options>
-									<option value="custom_ilcoin">ILCoin</options>
-									<option value="custom_smartcash">SmartCash</options>
-									<option value="custom_terracoin">Terracoin</options>
-									<option value="custom_syscoin">Syscoin</options>
-									<option value="custom_deviantcoin">DeviantCoin</options>
+									<option value="ripple.host">Ripple</option>
+									<option value="custom_particl">Particl</option>
+									<option value="custom_aurora">AuroraCoin</option>
+									<option value="custom_htmlcoin">Htmlcoin</option>
+									<option value="custom_safecoin">SafeCoin</option>
+									<option value="custom_rdd">Reddcoin</option>
+									<option value="custom_feather">feathercoin</option>
+									<option value="custom_viacoin">Viacoin</option>
+									<option value="custom_komodo">Komodo</option>
+									<option value="custom_experiencechain">eXPerience Chain</option>
+									<option value="custom_piratechain">Pirate-Chain</option>
+									<option value="custom_eureka">Eureka Coin</option>
+									<option value="custom_gobyte">GoByte</option>
+									<option value="custom_axecore">Axecore</option>
+									<option value="custom_capricoin">Capricoin</option>
+									<option value="custom_zcash">zCash</option>
+									<option value="custom_commercium">Commercium</option>
+									<option value="custom_globaltoken">GlobalToken</option>
+									<option value="custom_zcoin">zCoin</option>
+									<option value="custom_qtum">qtum</option>
+									<option value="custom_ilcoin">ILCoin</option>
+									<option value="custom_smartcash">SmartCash</option>
+									<option value="custom_terracoin">Terracoin</option>
+									<option value="custom_syscoin">Syscoin</option>
+									<option value="custom_deviantcoin">DeviantCoin</option>
+									<option value="custom_dimecoin">Dimecoin</option>
+									<option value="custom_lynx">Lynx</option>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -7240,7 +7247,7 @@ jQuery(document).ready(function($) {
 
 		<div id="footer">
 			<div class="container text-right">
-	        		<p class="text-muted">Version  2.0.33</p>
+	        		<p class="text-muted">Version  2.0.34</p>
 			</div>
 		</div>
 
