--- a/index.html
+++ b/index.html
@@ -6985,6 +6985,8 @@ jQuery(document).ready(function($) {
 									<option value="custom_deviantcoin" rel="0x5a;0x89;0xa;0xee80286a;0xee8031e8;custom_deviantcoin;custom_deviantcoin">DeviantCoin</option>
 									<option value="custom_syscoin" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;custom_syscoin;custom_syscoin">Syscoin</option>
 									<option value="custom_dimecoin" rel="0xf;0x8f;0x9;0xee80286a;0xee8031e8;custom_dimecoin;custom_dimecoin">Dimecoin</option>
+									<option value="custom_blocknet" rel="0x1a;0x9a;0x6;0xee80286a;0xee8031e8;custom_blocknet;custom_blocknet">Blocknet</option>
+									<option value="custom_utip" rel="0x17;0x97;0x55;0xee80286a;0xee8031e8;custom_utip;custom_utip">uTipcoin</option>
 									<option value="custom_lynx" rel="0x2d;0xad;0x32;0xee80286a;0xee8031e8;custom_lynx;custom_lynx">Lynx</option>
 									<!-- <option value="" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;x;x"></option> -->
 									<option value="custom" rel="0x00;0x80;0x05;0x488b21e;0x488ade4;cryptoid.custom;cryptoid.custom">Custom</option>
@@ -7156,12 +7158,14 @@ jQuery(document).ready(function($) {
 									<option value="custom_globaltoken">GlobalToken</option>
 									<option value="custom_zcoin">zCoin</option>
 									<option value="custom_qtum">qtum</option>
+									<option value="custom_utip">uTipcoin</option>
 									<option value="custom_ilcoin">ILCoin</option>
 									<option value="custom_smartcash">SmartCash</option>
 									<option value="custom_terracoin">Terracoin</option>
 									<option value="custom_syscoin">Syscoin</option>
 									<option value="custom_deviantcoin">DeviantCoin</option>
 									<option value="custom_dimecoin">Dimecoin</option>
+									<option value="custom_blocknet">Blocknet</option>
 									<option value="custom_lynx">Lynx</option>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
@@ -7215,12 +7219,14 @@ jQuery(document).ready(function($) {
 									<option value="custom_globaltoken">GlobalToken</option>
 									<option value="custom_zcoin">zCoin</option>
 									<option value="custom_qtum">qtum</option>
+									<option value="custom_utip">uTipcoin</option>
 									<option value="custom_ilcoin">ILCoin</option>
 									<option value="custom_smartcash">SmartCash</option>
 									<option value="custom_terracoin">Terracoin</option>
 									<option value="custom_syscoin">Syscoin</option>
 									<option value="custom_deviantcoin">DeviantCoin</option>
 									<option value="custom_dimecoin">Dimecoin</option>
+									<option value="custom_blocknet">Blocknet</option>
 									<option value="custom_lynx">Lynx</option>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
