--- a/index.html
+++ b/index.html
@@ -6952,6 +6952,7 @@ jQuery(document).ready(function($) {
 									<option value="pandacoin_mainnet" rel="0x37;0xb7;0x16;0x488b21e;0x488ade4;coinb.in;coinb.in">Pandacoin (mainnet)</option>
 									<option value="pandacoin_mainnet" rel="0x37;0xb7;0x16;0x488b21e;0x488ade4;pndcoin_server1;pndcoin_server1">Pandacoin (server1)</option>
                   <option value="cypherfunk_mainnet" rel="0x1c;0x9c;0x3f;0x488b21e;0x488ade4;cryptoid.info_cypherfunk;cryptoid.info_cypherfunk">Cypherfunk (mainnet)</option>
+									<option value="cypherfunk_cryptodepot" rel="0x1c;0x9c;0x3f;0x488b21e;0x488ade4;cryptoid.info_cypherfunkdot;cryptoid.info_cypherfunkdot">Cypherfunk (CryptoDepot)</option>
                   <option value="zeitcoin_mainnet" rel="0x33;0xb3;0x08;0x488b21e;0x488ade4;cryptoid.info_zeitcoin;cryptoid.info_zeitcoin">Zeitcoin (mainnet)</option>
                   <option value="digibyte_mainnet" rel="0x1e;0x80;0x3f;0x488b21e;0x488ade4;digiexplorer.info;digiexplorer.info">DigiByte (mainnet)</option>
 									<option value="litecoin_mainnet" rel="0x30;0xb0;0x32;0x019da462;0x019d9cfe;blockchair_litecoin;blockchair_litecoin">Litecoin (mainnet)</option>
@@ -7131,6 +7132,7 @@ jQuery(document).ready(function($) {
 									<option value="blockchair_dogecoin">Blockchair (Dogecoin)</option>
 									<option value="chain.so_bitcoinmainnet"> Chain.so (Bitcoin mainnet)</option>
 									<option value="cryptoid.info_cypherfunk"> Cryptoid.info (Cypherfunk)</option>
+									<option value="cryptoid.info_cypherfunkdot"> Cryptodepot (Cypherfunk)</option>
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
 									<option value="bch.host">Bitcoin Cash</option>
@@ -7192,6 +7194,7 @@ jQuery(document).ready(function($) {
 									<option value="blockchair_dogecoin"> Blockchair.com (Dogecoin)</option>
 									<option value="chain.so_bitcoinmainnet"> Chain.so (Bitcoin mainnet)</option>
                   <option value="cryptoid.info_cypherfunk">Cryptoid.info (Cypherfunk)</option>
+									<option value="cryptoid.info_cypherfunkdot">Cryptodepot (Cypherfunk)</option>
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
 									<option value="bch.host">Bitcoin Cash</option>
